<resources>
    <string name="app_name">GET PET HELP</string>
    <string name="app_in_name">GET PET HELP</string>
    <string name="app_name_after">Приложение для владельцев домашних животных и тех, кто собирается обзавестись питомцем!</string>
    <string name="text_bottom">Войдите в свою учетную запись</string>
    <string name="button">Войти</string>
    <string name="button2">Зарегистрироваться</string>
    <string name="title_activity_maiw">MaiwActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_free_task">Доступные задания</string>
    <string name="menu_my_task">Мои просьбы</string>
    <string name="menu_my_work">Мои выполняемые задания </string>
    <string name="menu_articles">Статьи</string>
    <string name="menu_top">Рейтинг пользователей</string>
    <string name="menu_reviews">Отзывы о нас</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_send">Отправка ошибок</string>
    <string name="menu_profile">Мой профиль</string>
    <string name="profile_pass">Изменение пароля</string>
    <string name="profile_photo">Изменение аватарки</string>
    <string name="profile_exit">Выйти из аккаунта</string>
</resources>
