<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Деятельность">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/round_assignment_black_48"
                android:title="@string/menu_free_task" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/round_library_books_black_48"
                android:title="@string/menu_my_task" />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/baseline_video_library_black_48"
                android:title="@string/menu_my_work" />
        </menu>
    </item>

    <item android:title="Сообщество">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/baseline_share_black_48"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/baseline_bug_report_black_48"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/baseline_message_black_48"
                android:title="@string/menu_articles" />
        </menu>
    </item>

    <item android:title="Аккаунт">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/baseline_person_black_48"
                android:title="@string/menu_profile" />
        </menu>
    </item>

</menu>
