<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.FreeTask.FreeTaskFragment"
        android:label="@string/menu_free_task"
        tools:layout="@layout/fragment_free_tasks" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.MyTask.GalleryFragment"
        android:label="@string/menu_my_task"
        tools:layout="@layout/fragment_my_task" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.MyWork.MyWorkFragment"
        android:label="@string/menu_my_work"
        tools:layout="@layout/fragment_my_work" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.myapplication.ui.Articles.ArticlesFragment"
        android:label="@string/menu_articles"
        tools:layout="@layout/fragment_articles" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.myapplication.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.myapplication.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_my_work" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.myapplication.ui.MyProfile.MyProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_my_profile" />
</navigation>