<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="?attr/colorPrimary"
        android:orientation="vertical"
        android:paddingLeft="@dimen/profile_horizontal_margin"
        android:paddingTop="11dp"
        android:gravity="center"
        android:paddingRight="@dimen/profile_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/name_user"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"

            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="140dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pass"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/btn"
            android:ellipsize="marquee"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/profile_pass"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/photo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/btn"
            android:ellipsize="marquee"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/profile_photo"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exit"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="105dp"
            android:background="@drawable/btn"
            android:ellipsize="marquee"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/profile_exit"
            android:textColor="@android:color/holo_red_dark" />

    </LinearLayout>

</RelativeLayout>