<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/dog2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_element"
    tools:context=".MapActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="35sp" />



    </LinearLayout>

    <TextView
        android:id="@+id/text_bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/text_bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:text="@string/text_bottom" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="15dp"
        android:layout_above="@id/text_bottom"
        android:layout_marginTop="25dp"

        android:orientation="horizontal">


        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/buttonsignin"
            android:fontFamily="@font/montserrat"
            android:text="Попросить о помощи"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="@drawable/buttonsignin"
            android:fontFamily="@font/montserrat"
            android:text="@string/button2"
            android:textColor="@android:color/black" />
    </LinearLayout>
</RelativeLayout>